src/snapshots/afrotd__parser__tests__interpretation_html_6.1.10_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.1.10.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Free Kick von der A-35. Der Kick ist hoch und weit und fliegt in
            Richtung des Pylons, wo B22 sich in Position befindet, den Ball zu
            fangen. Während des Kicks formieren B56 und B44 an der B-40 eine
            Wedge. Der Ball (a) trifft B22 an der B-3 am Gesichtsgitter, prallt
            nach vorne und geht an der B-10 ins Seitenaus; (b) kommt an der B-3
            auf dem Boden auf und rollt an der B-2 unberührt ins Seitenaus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Foul für eine illegale Wedge-Formation, Team B’s 1. und 10
                an der B-5; (b) Foul für den Free Kick ins Aus, aber kein Foul
                für eine illegale Wedge-Formation.
            </p>
        </details>
    </div>
</article>
