src/snapshots/afrotd__parser__tests__interpretation_html_6.1.2_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.1.2.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A begeht ein Offside während des Free Kicks. B27 recovert den
            Kick, während er sich mit einem Knie auf dem Boden befindet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul von Team A für Offside. Der Ball wird dead am Punkt der
                Recovery. Strafe: Team B kann 5 Meter vom Previous Spot mit
                neuem Free Kick oder 5 Meter vom Dead Ball Spot mit eigenem
                ersten Down und 10 wählen. Die Recovery von B27 startet ein
                Laufspiel, welches sofort endet. Gleiches gilt, wenn B27 einen
                Fair Catch vervollständigt.
            </p>
        </details>
    </div>
</article>
