src/snapshots/afrotd__parser__tests__interpretation_html_6.1.2_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.1.2.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A begeht ein Offside während des Free Kicks und B17 fängt den
            Ball an der B-15. B17 advanct den Ball zu der B-45, wo er fumbelt.
            A67 recovert den Ball an der B-47 und advanct zu der B-35, wo auch
            er fumbelt. B20 recovert den Ball an der B-33 und wird dort
            gestoppt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Foul für Offside. Team B kann wählen, dass Team A den
                Kick nach einer 5-Meterstrafe vom Previous Spot wiederholt oder
                Team B kann einen First Down und 10 von der eigenen
                38-Meterlinie haben.
            </p>
        </details>
    </div>
</article>
