src/snapshots/afrotd__parser__tests__interpretation_html_6.1.2_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.1.2.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            Zu einem späten Zeitpunkt im Spiel stellt sich Team A zu einem Free
            Kick von der A-35 auf, während Team A mit zwei Punkten zurückliegt.
            Team A stellt sich zu einem Onside Kick auf. Das Kicking Team hat
            sechs Spieler auf der linken Seite des Kickers und vier Spieler auf
            dessen rechter Seite. Kicker A90 hat sich zu dem Kick auf der
            linken Seite der Formation aufgestellt. Als A90 anläuft, laufen
            auch die Spieler auf seiner linken Seite an. A90 stoppt abrupt und
            bleibt vor dem Ball stehen, während die links befindlichen Spieler
            weiterlaufen und die Team A-Restraining Line überqueren. Auch diese
            Spieler halten an und kehren hinter die Restraining Line zurück.
            Als sie sich hinter der Restraining Line befinden, dreht sich A90
            schnell um und kickt den Ball auf die rechte Seite der Formation,
            während sich alle Team A-Spieler hinter ihrer Restraining Line
            befinden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul, 5Meterstrafe vom Succeeding Spot. Gemäß der
                Regel (Regel 6.1.2.c) muss sich jeder Team A-Spieler, außer dem
                Kicker und einem potenziellen Ballhalter beim Kick hinter dem
                Ball befinden. Befinden sie sich jenseits des Balles und der
                Ball wird gekickt, ist das eine Live Ball Foul für ein Offside
                bei einem Free Kick. Gemäß der Interpretation begeht ein Team
                A-Spieler ein Dead Ball Foul für ein Offside beim Free Kick,
                wenn er, nachdem der Ball freigegeben wurde, seine Restraining
                Line überquert und sich dann zurück hinter seine Restraining
                Line begibt, bevor der Kick durchgeführt wird. Diese
                Interpretation gilt nicht für Situationen, wenn der Ball vom
                Kicking Tee fällt (Regel 6.1.2.d). Wenn der Ball vom Kicking
                Tee fällt, müssen die Schiedsrichter sofort abpfeifen und die
                Teams zurück hinter ihre Restraining Lines schicken.
            </p>
        </details>
    </div>
</article>
