src/snapshots/afrotd__parser__tests__interpretation_html_6.1.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.1.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A führt von der A-35 einen Onside Kick durch. Der unberührte
            Kick befindet sich an der A-43, als A55 an der A-46 B44 von vorne
            über der Taille blockt. A28 mufft den Ball an der A-44, und nachdem
            der Ball zu der A-46 rollt, blockt A88 B22 an der A-42. Der Ball
            wird letztendlich von A20 an der A-44 recovert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Block durch A55 ist ein Foul, und die Berührung durch A28
                ist illegal, da Team A nicht berechtigt ist, den Ball zu
                berühren, weil dieser weder die 10 Meter überbrückt noch Team B
                berührt hat. Der Block von A88 ist legal, weil er durchgeführt
                worden ist, nachdem der Ball die 10 Meter überbrückt hat. Team
                A befindet sich am Ende des Downs legal in Ballbesitz, als A20
                den Ball an der A-44 recovert. Team B hat zwei Möglichkeiten:
                die Strafe für den illegalen Block ablehnen und den Ball an der
                A-44 aufgrund der illegalen Berührung zu übernehmen oder das
                Privileg bezüglich illegalen Berührens nicht wahrnehmen und
                Team A nach einer 5-Meterstrafe für den illegalen Block durch
                A55 erneut von der A-30 kicken lassen. Es ist besonders zu
                beachten, dass der Dead Ball Spot, die A-44, kein Enforcement
                Spot ist, da der Ball am Ende des Downs nicht zu Team B gehört
                (Regel 6.1.12).
            </p>
        </details>
    </div>
</article>
